# agentibridge

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  agentibridge.env.example  index.md  pyproject.toml
.github/workflows/: build.yml  dev-build.yml  docker-publish.yml  docs-audit.yml  e2e-smoke.yml  helm-publish.yml  pages.yml  publish-pypi.yml  sonar-scan.yml  test.yml
agentibridge/: claude_assets.py  cli.py  config.py  local_agents.py  parser.py  registry.py  server.py  transport.py
agentibridge/data/: agentibridge.env.example
agentibridge/package/: .mcp.json  CLAUDE.md
agentibridge/package/skills/session-handoff/: SKILL.md
agentibridge/package/skills/session-handoff/scripts/: 01_resolve_target.sh  02_encode_memory_dir.sh  03_inventory_target.sh  04_validate_frontmatter.sh  05_update_memory_index.sh  06_verify_and_report.sh
automation/: cloudfared.sh
deploy/: com.agentibridge.plist
docs/architecture/: agent-registry.md  index.md  internals.md  remote-access.md
docs/getting-started/: connecting-clients.md
docs/reference/: configuration.md
tests/unit/: test_cli.py  test_local_agents.py  test_registry.py
