[project]
name = "agentibridge"
version = "0.7.0"
description = "Claude CLI transcript indexer and MCP server"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "The Cloud Clockwork"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "redis>=7.0",
    "uvicorn[standard]>=0.30",
    "httpx>=0.25",
    "anthropic>=0.40",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/The-Cloud-Clockwork/agentibridge"
Repository = "https://github.com/The-Cloud-Clockwork/agentibridge"
Issues = "https://github.com/The-Cloud-Clockwork/agentibridge/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.21",
    "numpy",
    "ruff>=0.4",
]

[project.scripts]
agentibridge = "agentibridge.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentibridge*"]

[tool.setuptools.package-data]
agentibridge = [
    "data/*",
    "data/.*",
    "package/CLAUDE.md",
    "package/**/*",
    "package/**/.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: no external deps",
    "integration: requires Docker",
    "stress: large data",
]

[tool.ruff]
target-version = "py312"
line-length = 120
